# Codeforces

./: CMakeLists.txt  README.md
ER149/: 1837C.cpp  1837D.cpp  1837F.cpp
R874/: 1833A.cpp  1833B.cpp  1833C.cpp  1833D.cpp  1833E.cpp  1833F.cpp
R875-2/: 1813B.cpp  1831A.cpp  1831C.cpp
R878/: 1840A.cpp  1840B.cpp  1840C.cpp  1840D.cpp
