cmake_minimum_required(VERSION 3.22)
project(Codeforces)

set(CMAKE_CXX_STANDARD 17)

add_executable(1833A R874/1833A.cpp)
add_executable(1833B R874/1833B.cpp)
add_executable(1833C R874/1833C.cpp)
add_executable(1833D R874/1833D.cpp)
add_executable(1833E R874/1833E.cpp)
add_executable(1833F R874/1833F.cpp)