cmake_minimum_required(VERSION 3.22)
project(Codeforces)

set(CMAKE_CXX_STANDARD 17)

add_executable(1833A R874/1833A.cpp)
add_executable(1833B R874/1833B.cpp)
add_executable(1833C R874/1833C.cpp)
add_executable(1833D R874/1833D.cpp)
add_executable(1833E R874/1833E.cpp)
add_executable(1833F R874/1833F.cpp)
add_executable(1827A R873/1827A.cpp)
add_executable(1827B R873/1827B.cpp)
add_executable(1831A R875-2/1831A.cpp)
add_executable(1813B R875-2/1813B.cpp)