cmake_minimum_required(VERSION 3.20.2)
project(Codeforces)

set(CMAKE_CXX_STANDARD 17)

add_executable(1833A R874/1833A.cpp)
add_executable(1833B R874/1833B.cpp)
add_executable(1833C R874/1833C.cpp)
add_executable(1833D R874/1833D.cpp)
add_executable(1833E R874/1833E.cpp)
add_executable(1833F R874/1833F.cpp)
add_executable(1837C ER149/1837C.cpp)
add_executable(1837D ER149/1837D.cpp)
add_executable(1837F ER149/1837F.cpp)
add_executable(1831C R875-2/1831C.cpp)
add_executable(1840B R878/1840B.cpp)
add_executable(1840C R878/1840C.cpp)
add_executable(1840A R878/1840A.cpp)
add_executable(1840D R878/1840D.cpp)
add_executable(1827A R873/1827A.cpp)
add_executable(1827B R873/1827B.cpp)
add_executable(1831A R875-2/1831A.cpp)
add_executable(1813B R875-2/1813B.cpp)